Updated project files