@@ -1,13 +1,11 @@
 package org.example.service;
 
-import io.quarkus.test.InjectMock;
-import io.quarkus.test.junit.QuarkusTest;
-import jakarta.inject.Inject;
+import jakarta.persistence.EntityManager;
 import org.apache.camel.Exchange;
-import org.apache.camel.impl.DefaultExchange;
-import org.apache.camel.impl.DefaultCamelContext;
+import org.apache.camel.Message;
 import org.example.dto.OrderDto;
 import org.example.model.Fabric;
+import org.example.model.Order;
 import org.example.model.Person;
 import org.example.model.Tailor;
 import org.example.repository.FabricRepository;
@@ -16,90 +14,138 @@ import org.example.repository.PersonRepository;
 import org.example.repository.TailorRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
-import java.util.Collections;
+import org.mockito.*;
+
 import java.util.List;
+import java.util.Map;
+
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-
-@QuarkusTest
 class OrderServiceTest {
 
-    @Inject
-    OrderService orderService;
+    @InjectMocks
+    private OrderService orderService;
 
-    @InjectMock
-    PersonRepository personRepository;
+    @Mock
+    private PersonRepository personRepository;
 
-    @InjectMock
-    FabricRepository fabricRepository;
+    @Mock
+    private FabricRepository fabricRepository;
 
-    @InjectMock
-    TailorRepository tailorRepository;
+    @Mock
+    private TailorRepository tailorRepository;
 
-    @InjectMock
-    OrderRepository orderRepository;
+    @Mock
+    private OrderRepository orderRepository;
 
-    Exchange exchange;
-    OrderDto orderDto;
+    @Mock
+    private EntityManager entityManager;
+
+    @Mock
+    private Exchange exchange;
+
+    @Mock
+    private Message message;
 
     @BeforeEach
     void setup() {
-        exchange = new DefaultExchange(new DefaultCamelContext());
-        orderDto = new OrderDto();
-        orderDto.setPersonId(1);
+        MockitoAnnotations.openMocks(this);
+        when(exchange.getIn()).thenReturn(message);
+    }
+
+    @Test
+    void testValidateOrder_personDoesNotExist() {
+        OrderDto orderDto = new OrderDto();
+        orderDto.setPersonId(1L);
+        when(message.getBody(OrderDto.class)).thenReturn(orderDto);
+        when(personRepository.getPersonById(1L)).thenReturn(null);
+
+        orderService.validateOrder(exchange);
+
+        verify(message).setBody("Person with this id does not exist");
+    }
+
+    @Test
+    void testValidateOrder_fabricDoesNotExist() {
+        OrderDto orderDto = new OrderDto();
+        orderDto.setPersonId(1L);
         orderDto.setFabric("Cotton");
-        exchange.getIn().setBody(orderDto);
-    }
 
-    @Test
-    void testValidateOrder_personNotFound() {
-        when(personRepository.getPersonById(1)).thenReturn(null);
-        orderService.validateOrder(exchange);
-        assertEquals("Person with this id does not exist", exchange.getIn().getBody());
-    }
+        when(message.getBody(OrderDto.class)).thenReturn(orderDto);
+        when(personRepository.getPersonById(1L)).thenReturn(new Person());
+        when(fabricRepository.getFabricByName("Cotton")).thenReturn(0L);
 
-    @Test
-    void testValidateOrder_fabricNotFound() {
-        when(personRepository.getPersonById(1)).thenReturn(new Person());
-        when(fabricRepository.getFabricByName("Cotton")).thenReturn(0);
         orderService.validateOrder(exchange);
-        assertEquals("This fabric does not exist", exchange.getIn().getBody());
+
+        verify(message).setBody("This fabric does not exist");
     }
 
     @Test
     void testValidateOrder_noTailorAvailable() {
-        when(personRepository.getPersonById(1)).thenReturn(new Person());
-        when(fabricRepository.getFabricByName("Cotton")).thenReturn(1);
-        when(tailorRepository.getAvailableTailor()).thenReturn(Collections.emptyList());
+        OrderDto orderDto = new OrderDto();
+        orderDto.setPersonId(1L);
+        orderDto.setFabric("Cotton");
+
+        when(message.getBody(OrderDto.class)).thenReturn(orderDto);
+        when(personRepository.getPersonById(1L)).thenReturn(new Person());
+        when(fabricRepository.getFabricByName("Cotton")).thenReturn(1L);
+        when(tailorRepository.getAvailableTailor()).thenReturn(List.of());
+
         orderService.validateOrder(exchange);
-        assertEquals("No Tailor is Available Now", exchange.getIn().getBody());
+
+        verify(message).setBody("No Tailor is Available Now");
     }
 
     @Test
-    void testValidateOrder_tailorNotHavingFabric() {
-        when(personRepository.getPersonById(1)).thenReturn(new Person());
-        when(fabricRepository.getFabricByName("Cotton")).thenReturn(1);
+    void testValidateOrder_noTailorWithFabric() {
+        OrderDto orderDto = new OrderDto();
+        orderDto.setPersonId(1L);
+        orderDto.setFabric("Cotton");
+
         Tailor tailor = new Tailor();
-        tailor.setFabrics(List.of(new Fabric("Silk"))); // tailor doesn't have cotton
+        Fabric fabric = new Fabric();
+        fabric.setFabricName("Silk"); // Not matching "Cotton"
+        tailor.setFabrics(List.of(fabric));
+
+        when(message.getBody(OrderDto.class)).thenReturn(orderDto);
+        when(personRepository.getPersonById(1L)).thenReturn(new Person());
+        when(fabricRepository.getFabricByName("Cotton")).thenReturn(1L);
         when(tailorRepository.getAvailableTailor()).thenReturn(List.of(tailor));
+
         orderService.validateOrder(exchange);
-        assertEquals("No tailor have this fabric", exchange.getIn().getBody());
+
+        verify(message).setBody("No tailor have this fabric");
     }
 
     @Test
-    void testValidateOrder_success() {
-        when(personRepository.getPersonById(1)).thenReturn(new Person());
-        when(fabricRepository.getFabricByName("Cotton")).thenReturn(1);
+    void testValidateOrder_successfulOrder() {
+        OrderDto orderDto = new OrderDto();
+        orderDto.setPersonId(1L);
+        orderDto.setFabric("Cotton");
+
+        Person person = new Person();
         Tailor tailor = new Tailor();
-        tailor.setFabrics(List.of(new Fabric("Cotton")));
+        Fabric fabric = new Fabric();
+        fabric.setFabricName("Cotton");
+        tailor.setFabrics(List.of(fabric));
+
+        when(message.getBody(OrderDto.class)).thenReturn(orderDto);
+        when(personRepository.getPersonById(1L)).thenReturn(person);
+        when(fabricRepository.getFabricByName("Cotton")).thenReturn(1L);
         when(tailorRepository.getAvailableTailor()).thenReturn(List.of(tailor));
 
         orderService.validateOrder(exchange);
-        var body = exchange.getIn().getBody(Map.class);
-        assertEquals("order placed successfully", body.get("status"));
-        assertNotNull(body.get("orderId"));
+
+        // Order placement successful — verify that a map with orderId and status was set in body
+        ArgumentCaptor<Map<String, Object>> captor = ArgumentCaptor.forClass(Map.class);
+        verify(message).setBody(captor.capture());
+
+        Map<String, Object> responseBody = captor.getValue();
+        assertEquals("order placed successfully", responseBody.get("status"));
+        assertNotNull(responseBody.get("orderId"));
+
+        verify(orderRepository).persist(any(Order.class));
+        verify(entityManager).merge(tailor);
     }
 }
-
